# stock-analyser

./: AGENTS.md  CLAUDE.md  README.md  docker-compose.yaml
stock-news-service/: .env.example  .gitignore  Dockerfile  alembic.ini  cron.py  main.py  pyproject.toml  worker.py
stock-news-service/alembic/: env.py
stock-news-service/alembic/versions/: 001_initial_tables.py
stock-news-service/app/: config.py
stock-news-service/app/models/: __init__.py  news.py  ticker.py
stock-news-service/app/repositories/: news_repository.py  ticker_repository.py
stock-news-service/app/routers/: news.py
stock-news-service/app/schemas/: news.py
stock-news-service/app/services/: cron_service.py  fetch_service.py  news_service.py
stock-news-service/tests/: conftest.py  test_cron_service.py  test_fetch_service.py  test_news_repository.py  test_news_router.py  test_ticker_repository.py
stock-ta-service/: .env.example  Dockerfile  alembic.ini  main.py  plan.md  pyproject.toml  requirement.md  worker.py
stock-ta-service/alembic/: env.py
stock-ta-service/alembic/versions/: 001_create_tickers_and_ta_indicators.py
stock-ta-service/app/: config.py
stock-ta-service/app/models/: __init__.py  ta_indicator.py  ticker.py
stock-ta-service/app/repositories/: ta_repository.py  ticker_repository.py
stock-ta-service/app/routers/: ta_router.py
stock-ta-service/app/schemas/: ta_indicator.py
stock-ta-service/app/services/: price_client.py  ta_calculator.py  ta_service.py
stock-ta-service/tests/: conftest.py  test_ta_calculator.py  test_ta_repository.py  test_ta_router.py  test_ta_service.py
stock-watchlist-service/: .env.example  Dockerfile  main.py  pyproject.toml
stock-watchlist-service/alembic/: env.py
stock-watchlist-service/alembic/versions/: 001_initial_tables.py
stock-watchlist-service/app/: config.py  sns_publisher.py
stock-watchlist-service/app/models/: __init__.py  watchlist.py
stock-watchlist-service/app/repositories/: watchlist_repository.py
stock-watchlist-service/app/routers/: watchlist.py
stock-watchlist-service/app/schemas/: watchlist.py
stock-watchlist-service/app/services/: watchlist_service.py
trading-strategy-finder/: .env.example  CLAUDE.md  conftest.py  main.py  plan.md  pyproject.toml  requirement.md  seed.py
trading-strategy-finder/app/: chroma.py  config.py
trading-strategy-finder/tests/: conftest.py  test_agent_nodes.py  test_backtest_repository.py  test_documents_router.py  test_strategies_router.py  test_strategy_repository.py
(+115 files in other folders)
