[project]
name = "stock-ta-service"
version = "0.1.0"
description = "Technical analysis service — computes TA indicators from OHLC data"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.6.0",
    "ta>=0.11.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false
