[project]
name = "stock-watchlist-service"
version = "0.1.0"
description = "Stock watchlist microservice with FastAPI, SQLAlchemy, and PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.2.2",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
